Corrigida a palavra cursos do div.nav no index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="img/logo.svg" alt="Tom's Jazz School">
             <nav>
                 <a href="#">Início</a>
-                <a href="#">Crusos</a>
+                <a href="#">Cursos</a>
                 <a href="#">Eventos</a>
                 <a href="#">Contatos</a>
             </nav>
