Adicinado campo ajuda no div.nav do index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a href="#">Cursos</a>
                 <a href="#">Eventos</a>
                 <a href="#">Contatos</a>
+                <a href="#">Ajuda</a>
             </nav>
             <a href="#" class="button mt-1 mx-auto mb-1">Se inscreva</a>
         </div>
